--- a/pom.xml
+++ b/pom.xml
@@ -205,6 +205,7 @@
 			<groupId>org.primefaces</groupId>
 			<artifactId>primefaces</artifactId>
 			<version>4.0</version>
+			<!-- <version>5.1</version> -->
 		</dependency>
 
 		<!-- GNU Lesser General Public License -->
