--- a/pom.xml
+++ b/pom.xml
@@ -1,16 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!-- Maven -->
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+
+	<!-- ... -->
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>UniWueSQL</groupId>
-	<artifactId>sql</artifactId>
-	<version>0.9.0-SNAPSHOT</version>
 	<packaging>war</packaging>
+
+	<!-- ... -->
+	<groupId>uniwue</groupId>
+	<artifactId>ueps</artifactId>
+	<version>0.9.1</version>
+	<description>A web-based intelligent teaching tool for the SQL database language.</description>
+
+	<!-- ... -->
 	<properties>
+		<jdk.version>1.8</jdk.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 	</properties>
-	<description>SQL Trainer</description>
+
+	<!-- ... -->
+	<licenses>
+		<license>
+			<name>The Apache Software License, Version 2.0</name>
+			<url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+			<distribution>repo</distribution>
+			<comments>A business-friendly OSS license</comments>
+		</license>
+	</licenses>
+
+	<!-- ... -->
 	<developers>
 		<developer>
 			<name>Michael Jedich</name>
@@ -20,13 +39,9 @@
 			<name>Christian Schneider</name>
 		</developer>
 	</developers>
+
+	<!-- ... -->
 	<repositories>
-		<repository>
-			<id>in-project</id>
-			<name>In Project Repo</name>
-			<url>file://${project.basedir}/lib</url>
-			<layout>default</layout>
-		</repository>
 		<repository>
 			<id>prime-repo</id>
 			<name>PrimeFaces Maven Repository</name>
@@ -34,8 +49,10 @@
 			<layout>default</layout>
 		</repository>
 	</repositories>
+
+	<!-- ... -->
 	<build>
-		<finalName>sql</finalName>
+		<finalName>ueps</finalName>
 		<plugins>
 			<plugin>
 				<artifactId>maven-compiler-plugin</artifactId>
@@ -62,87 +79,77 @@
 			</plugin>
 		</plugins>
 	</build>
-	<dependencies>
 
-		<!-- Apache License V2.0 -->
+	<!-- ... -->
+	<!-- http://en.wikipedia.org/wiki/Comparison_of_free_and_open-source_software_licenses -->
+	<dependencies>
+		<!-- {{{ Apache License V2.0 -->
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
 			<version>18.0</version>
 		</dependency>
-
-		<!-- CDDL + GPLv2 with classpath exception -->
-		<dependency>
-			<groupId>javax</groupId>
-			<artifactId>javaee-web-api</artifactId>
-			<version>7.0</version>
-			<scope>provided</scope>
-		</dependency>
-
-		<!-- COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) plus GPL -->
-		<dependency>
-			<groupId>com.sun.faces</groupId>
-			<artifactId>jsf-api</artifactId>
-			<version>2.1.7</version>
-		</dependency>
-
-		<!-- COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) plus GPL -->
-		<dependency>
-			<groupId>com.sun.faces</groupId>
-			<artifactId>jsf-impl</artifactId>
-			<version>2.1.7</version>
-		</dependency>
-
-		<!-- Apache License V2.0 -->
 		<dependency>
 			<groupId>log4j</groupId>
 			<artifactId>log4j</artifactId>
 			<version>1.2.17</version>
 		</dependency>
-
-		<!-- Apache License V2.0 -->
 		<dependency>
 			<groupId>org.primefaces.themes</groupId>
 			<artifactId>all-themes</artifactId>
 			<version>1.0.9</version>
 		</dependency>
-
-		<!-- Apache License V2.0 -->
 		<dependency>
 			<groupId>org.omnifaces</groupId>
 			<artifactId>omnifaces</artifactId>
 			<version>1.7</version>
 		</dependency>
-
-		<!-- Apache License V2.0 -->
 		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
 		</dependency>
-
-		<!-- GNU Lesser General Public License -->
-		<dependency>
-			<groupId>org.mariadb.jdbc</groupId>
-			<artifactId>mariadb-java-client</artifactId>
-			<version>1.1.7</version>
-		</dependency>
-
-		<!-- Apache License V2.0 -->
 		<dependency>
 			<groupId>com.ocpsoft</groupId>
 			<artifactId>prettyfaces-jsf2</artifactId>
 			<version>3.3.3</version>
 		</dependency>
-
-		<!-- Apache License V2.0 -->
 		<dependency>
 			<groupId>org.apache.poi</groupId>
 			<artifactId>poi</artifactId>
 			<version>3.9</version>
 		</dependency>
-
-		<!-- Apache License V2.0 -->
+		<dependency>
+			<groupId>com.akiban</groupId>
+			<artifactId>akiban-sql-parser</artifactId>
+			<version>1.0.16</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>4.0.2.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-jdbc</artifactId>
+			<version>4.0.2.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>4.0.2.RELEASE</version>
+		</dependency>
+		<dependency>
+			<groupId>commons-io</groupId>
+			<artifactId>commons-io</artifactId>
+			<version>2.4</version>
+		</dependency>
+		<dependency>
+			<groupId>org.primefaces</groupId>
+			<artifactId>primefaces</artifactId>
+			<version>4.0-with-tablefix</version>
+			<!-- <version>5.1</version> -->
+		</dependency>
 		<dependency>
 			<groupId>commons-fileupload</groupId>
 			<artifactId>commons-fileupload</artifactId>
@@ -154,79 +161,75 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<!-- }}} -->
 
-		<!-- Apache License V2.0 -->
+
+		<!-- {{{ COMMON DEVELOPMENT AND DISTRIBUTION LICENSE (CDDL) plus GPL -->
 		<dependency>
-			<groupId>com.akiban</groupId>
-			<artifactId>akiban-sql-parser</artifactId>
-			<version>1.0.16</version>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-api</artifactId>
+			<version>2.1.7</version>
 		</dependency>
-
-		<!-- The BSD License -->
 		<dependency>
-			<groupId>antlr</groupId>
-			<artifactId>antlr</artifactId>
-			<version>2.7.6</version>
+			<groupId>com.sun.faces</groupId>
+			<artifactId>jsf-impl</artifactId>
+			<version>2.1.7</version>
 		</dependency>
-
-		<!-- ######## spring libraries ######## -->
-		<!-- Apache License V2.0 -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-core</artifactId>
-			<version>4.0.2.RELEASE</version>
+			<groupId>javax</groupId>
+			<artifactId>javaee-web-api</artifactId>
+			<version>7.0</version>
+			<scope>provided</scope>
 		</dependency>
+		<!-- }}} -->
 
-		<!-- Apache License V2.0 -->
+		<!-- {{{ GNU Lesser General Public License -->
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-jdbc</artifactId>
-			<version>4.0.2.RELEASE</version>
+			<groupId>org.mariadb.jdbc</groupId>
+			<artifactId>mariadb-java-client</artifactId>
+			<version>1.1.7</version>
 		</dependency>
-
-		<!-- Apache License V2.0 -->
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>4.0.2.RELEASE</version>
-		</dependency>
-
-		<!-- Apache License V2.0 -->
-		<dependency>
-			<groupId>commons-io</groupId>
-			<artifactId>commons-io</artifactId>
-			<version>2.4</version>
-		</dependency>
-
-		<!-- Apache License V2.0 -->
-		<dependency>
-			<groupId>org.primefaces</groupId>
-			<artifactId>primefaces</artifactId>
-			<version>4.0</version>
-			<!-- <version>5.1</version> -->
-		</dependency>
-
-		<!-- GNU Lesser General Public License -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-c3p0</artifactId>
 			<version>4.3.4.Final</version>
 		</dependency>
-
-		<!-- GNU Lesser General Public License -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-core</artifactId>
 			<version>4.3.4.Final</version>
 		</dependency>
-
 		<!-- needed for primefaces -->
-		<!-- GNU Lesser General Public License -->
 		<dependency>
 			<groupId>org.hibernate</groupId>
 			<artifactId>hibernate-validator</artifactId>
 			<version>5.0.1.Final</version>
 		</dependency>
+		<!-- }}} -->
+
+
+		<!-- {{{ The BSD License -->
+		<dependency>
+			<groupId>antlr</groupId>
+			<artifactId>antlr</artifactId>
+			<version>2.7.6</version>
+		</dependency>
+		<!-- }}} -->
+
+
+		<!-- {{{ The MIT License -->
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-api</artifactId>
+			<version>1.7.7</version>
+		</dependency>
+		<dependency>
+			<groupId>org.slf4j</groupId>
+			<artifactId>slf4j-log4j12</artifactId>
+			<version>1.7.7</version>
+		</dependency>
+		<!-- }}} -->
+
 
 	</dependencies>
 </project>
