--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -77,11 +77,25 @@ SCENARIO_RESOURCES          = ~/a/code/sql_java/misc/
 # ----------------------------------------------------------------
 
 # -- basic login-url ---------------------------------------------
+#
 # http://[hostname]/[rootfolder]/wuecampus/
 #   [scenario_id]/[user_id]/[secure_value]
 #
+# alternative:
+#
+# http://[hostname]/[rootfolder]/?scenarioID=[scenario_id]
+#   &userID=[user_id]&secureValue=[secure_value]
+#
+# ----------------------------------------------------------------
+#
 # e.g.: "http://localhost:8029/sql/wuecampus/1/
 #   /user_1/d1ac3b14896c2faf640d1e00966fc065"
+#
+# alternative:
+#
+# e.g.: "http://localhost:8029/sql/?scenarioID=1&userID=user_1
+#   &secureValue=d1ac3b14896c2faf640d1e00966fc065"
+#
 # ----------------------------------------------------------------
 
 # wuecampus-authentification-system
