--- a/pom.xml
+++ b/pom.xml
@@ -105,9 +105,9 @@
 			<version>1.7</version>
 		</dependency>
 		<dependency>
-			<groupId>commons-lang</groupId>
-			<artifactId>commons-lang</artifactId>
-			<version>2.6</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
+			<version>3.3.2</version>
 		</dependency>
 		<dependency>
 			<groupId>com.ocpsoft</groupId>
@@ -182,7 +182,7 @@
 			<scope>provided</scope>
 		</dependency>
 		<!-- }}} -->
-		
+
 
 		<!-- {{{ GNU Lesser General Public License -->
 		<dependency>
