--- a/src/main/resources/text_de_2014_12_07-22_43.properties
+++ b/src/main/resources/text_de_2014_12_07-22_43.properties
@@ -14,9 +14,9 @@
 # ############################################################################
 
 # header
-BASIC.NAME                  = \u00dcPS
-HEADER.DEFAULT              = \u00dcPS - Aufgabenliste
-HEADER.TASK_HEADER          = \u00dcPS - \u00dcbungsbereich
+BASIC.NAME                  = SQL-Trainer
+HEADER.DEFAULT              = SQL-Trainer - Aufgabenliste
+HEADER.TASK_HEADER          = SQL-Trainer - \u00dcbungsbereich
 
 HEADER.LINK1                = \u00dcbungen
 HEADER.LINK2                = Rechte
