--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -61,7 +61,7 @@ EXAMPLE_SCENARIO_DBPASS     =
 # READ and WRITE-permissions needed!
 # to avoid errors, consider using absolute file path
 
-SCENARIO_RESOURCES          = ~/a/code/sql_java/misc/
+SCENARIO_RESOURCES          = /home/foo/a/code/sql_java/misc/
 
 # IMPORTANT:
 # please extract the archive "resources.zip"
