Custom design options and new PropertyFile-Manager

--- a/src/main/resources/log4j.properties
+++ b/src/main/resources/log4j.properties
@@ -28,11 +28,11 @@ org.apache.catalina.core.ContainerBase.[Catalina].handlers=java.util.logging.Con
 # log4j.appender.hb.layout=org.apache.log4j.PatternLayout
 # log4j.appender.hb.layout.ConversionPattern=HibernateLog --> %d{HH:mm:ss} %-5p %c - %m%n
 # log4j.appender.hb.Threshold=TRACE
- 
+
 # Direct log messages to a log file
 log4j.appender.file=org.apache.log4j.RollingFileAppender
-# log4j.appender.file.File=/home/mischka/a/code/sql_java/misc/log/sql_trainer.log
-log4j.appender.file.File=${catalina.home}/sql_trainer.log
+# log4j.appender.file.File=/home/foo/tomcat/ueps.log
+log4j.appender.file.File=${catalina.home}/ueps.log
 log4j.appender.stdout.Threshold=INFO
 log4j.appender.file.MaxFileSize=1MB
 log4j.appender.file.MaxBackupIndex=10
@@ -47,7 +47,7 @@ log4j.appender.stderr.layout=org.apache.log4j.PatternLayout
 log4j.appender.stderr.layout.ConversionPattern=%n[%-5p]--%d{yyyy-MM-dd HH:mm:ss}--%c{1}%n[Thread:%t][%l]%n%m%n%n
 log4j.appender.stdout.filter.filter1=org.apache.log4j.varia.LevelRangeFilter
 log4j.appender.stdout.filter.filter1.levelMin=ERROR
- 
+
 # Direct log messages to stdout
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
 log4j.appender.stdout.Target=System.out
