--- a/pom.xml
+++ b/pom.xml
@@ -59,22 +59,23 @@
 				<version>3.0</version>
 				<configuration>
 					<!-- jdk version -->
-					<source>1.8</source>
-					<target>1.8</target>
+					<source>1.7</source>
+					<target>1.7</target>
 					<showWarnings>true</showWarnings>
 					<encoding>${project.build.sourceEncoding}</encoding>
 				</configuration>
 			</plugin>
 			<plugin>
-				<groupId>org.codehaus.mojo</groupId>
-				<artifactId>tomcat-maven-plugin</artifactId>
+				<groupId>org.apache.tomcat.maven</groupId>
+				<artifactId>tomcat7-maven-plugin</artifactId>
+				<version>2.1</version>
 				<configuration>
 					<url>http://127.0.0.1:8080/manager/text</url>
+					<mode>war</mode>
 					<!-- <warFile>test.war</warFile> -->
 					<server>TomcatServer</server>
-					<username>foo</username>
-					<password>foo</password>
-					<path>/sql</path>
+					<!-- <username>admin</username> <password>testing</password> -->
+					<path>/ueps</path>
 				</configuration>
 			</plugin>
 		</plugins>
