Extended rights management added

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -39,7 +39,7 @@ IMPORT_EXAMPLE_SCENARIO     = true
 # CREATE and DROP DATABASE-rights required
 # -- WARNING -----------------------------------------------------
 
-FORCE_RESET_DATABASE        = false
+FORCE_RESET_DATABASE        = true
 
 # -- if IMPORT_EXAMPLE_SCENARIO is set to 'true' -----------------
 # database credentials for the example scenario
