--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -34,10 +34,10 @@ xsi:schemaLocation="http://java.sun.com/xml/ns/javaee http://java.sun.com/xml/ns
   <listener-class>
   de.uniwue.info6.webapp.misc.InitVariables</listener-class>
  </listener>
- <listener>
-  <listener-class>
-  com.sun.faces.config.ConfigureListener</listener-class>
- </listener>
+ <!-- <listener>                                               -->
+ <!--  <listener-class>                                        -->
+ <!--  com.sun.faces.config.ConfigureListener</listener-class> -->
+ <!-- </listener>                                              -->
  <!-- JSF mapping -->
  <servlet>
   <servlet-name>Faces Servlet</servlet-name>
