--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -144,6 +144,9 @@ MOODLE_URL                  = https://
 # zusaetzlichen Rechten anzeigen lassen.
 SHOW_SOL_TO_PRIVELEGED      = true
 
+# Url zur MySQL-Dokumentation
+MYSQL_DOC_URL				= http://dev.mysql.com/doc/refman/5.6/en/
+
 # Falls keine Nutzer-ID ueber die URL gegeben ist, so laesst
 # sich ein 'Fallback'-Nutzer laden, was beim Debuggen/Entwicklen
 # nuetzlich ist.
