--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -51,7 +51,7 @@ MASTER_DBPASS               = 3ti4k4tm270kg
 # Ermoeglicht die Automatisierung der Datenbank-Konfiguration.
 # Dafuer benoetigt der unter $MASTER_DBUSER$ angegebene Nutzer
 # zusaetzlich noch 'ALTER, CREATE, DROP, LOCK TABLES'-Rechte.
-# Die Konfiguration wird nur gestartet, wenn keine
+# Die Installation wird nur gestartet, wenn keine
 # Datenbank mit dem Namen $MASTER_DBNAME$ gefunden wurde.
 
 IMPORT_DB_IF_EMPTY          = true
