--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -81,7 +81,7 @@ IMPORT_EXAMPLE_SCENARIO     = true
 # Anwendung selbst auf 'false' gesetzt, sodass ein Server-Neustart
 # die Datenbank nicht loescht
 
-FORCE_RESET_DATABASE        = false
+FORCE_RESET_DATABASE        = true
 
 # ------------------------------------------------------------ }}}
 
@@ -150,7 +150,7 @@ SHOW_SOL_TO_PRIVELEGED      = true
 
 USE_FALLBACK_USER           = true
 FALLBACK_USER               = user_1
-FALLBACK_SCENARIO           = 1
+FALLBACK_SCENARIO           = 2
 FALLBACK_SECUREVALUE        = d1ac3b14896c2faf640d1e00966fc065
 
 # Hat momentan keine Funktion:
