Performance-Verbesserungen, auf ComboPooledDataSource umgestellt

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -81,7 +81,7 @@ IMPORT_EXAMPLE_SCENARIO     = true
 # Anwendung selbst auf 'false' gesetzt, sodass ein Server-Neustart
 # die Datenbank nicht loescht
 
-FORCE_RESET_DATABASE        = true
+FORCE_RESET_DATABASE        = false
 
 # ------------------------------------------------------------ }}}
 
