--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -104,8 +104,11 @@ ADMINS                      = user_1;
 # Ausgefuelltes Beispiel:
 # http://localhost:8080/ueps/?scenarioID=1&userID=user_1
 #   &secureValue=d1ac3b14896c2faf640d1e00966fc065
+#
+# Wenn kein 'scenarioID' angegeben wurde, so wird eine
+# Uebersichtsseite mit allen vorhandenen Szenarien angezeigt.
 
-USE_MOODLE_LOGIN            = false
+USE_MOODLE_LOGIN            = true
 SECRET_ID_STRING            = thisIsADummySecret
 
 # ------------------------------------------------------------ }}}
@@ -153,7 +156,6 @@ MYSQL_DOC_URL               = http://dev.mysql.com/doc/refman/5.6/en/
 
 USE_FALLBACK_USER           = true
 FALLBACK_USER               = user_1
-FALLBACK_SCENARIO           = 2
 FALLBACK_SECUREVALUE        = d1ac3b14896c2faf640d1e00966fc065
 
 # Hat momentan keine Funktion:
