Großes Update, bessere Darstellung der Tabellen, Showcase-Mode, Bugfixes, Performancefixes

--- a/pom.xml
+++ b/pom.xml
@@ -1,27 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--
-  #%L
-  ************************************************************************
-  ORGANIZATION  :  Institute of Computer Science, University of Wuerzburg
-  PROJECT       :  UEPS - Uebungs-Programm fuer SQL
-  FILENAME      :  pom.xml
-  ************************************************************************
-  %%
-  Copyright (C) 2014 - 2015 Institute of Computer Science, University of Wuerzburg
-  %%
-  Licensed under the Apache License, Version 2.0 (the "License");
-  you may not use this file except in compliance with the License.
-  You may obtain a copy of the License at
-  
-       http://www.apache.org/licenses/LICENSE-2.0
-  
-  Unless required by applicable law or agreed to in writing, software
-  distributed under the License is distributed on an "AS IS" BASIS,
-  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-  See the License for the specific language governing permissions and
-  limitations under the License.
-  #L%
-  -->
+<!-- #%L ************************************************************************ 
+	ORGANIZATION : Institute of Computer Science, University of Wuerzburg PROJECT 
+	: UEPS - Uebungs-Programm fuer SQL FILENAME : pom.xml ************************************************************************ 
+	%% Copyright (C) 2014 - 2015 Institute of Computer Science, University of 
+	Wuerzburg %% Licensed under the Apache License, Version 2.0 (the "License"); 
+	you may not use this file except in compliance with the License. You may 
+	obtain a copy of the License at http://www.apache.org/licenses/LICENSE-2.0 
+	Unless required by applicable law or agreed to in writing, software distributed 
+	under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES 
+	OR CONDITIONS OF ANY KIND, either express or implied. See the License for 
+	the specific language governing permissions and limitations under the License. 
+	#L% -->
 
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
@@ -49,7 +38,7 @@
 		<jdk.version>1.7</jdk.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-		<target>target</target>
+		<target>trg</target>
 		<resourcesDir>res</resourcesDir>
 	</properties>
 
@@ -73,6 +62,16 @@
 			<name>Christian Schneider</name>
 		</developer>
 	</developers>
+
+	<!-- ... -->
+	<profiles>
+		<profile>
+			<id>test</id>
+			<build>
+				<directory>trg</directory>
+			</build>
+		</profile>
+	</profiles>
 
 	<!-- ... -->
 	<repositories>
@@ -99,6 +98,9 @@
 	<!-- ... -->
 	<build>
 		<finalName>ueps</finalName>
+		<directory>trg</directory>
+		<outputDirectory>trg/classes</outputDirectory>
+		<testOutputDirectory>trg/test-classes</testOutputDirectory>
 		<plugins>
 			<!-- Doxygen documentation -->
 			<plugin>
@@ -338,7 +340,7 @@
 		<dependency>
 			<groupId>org.mariadb.jdbc</groupId>
 			<artifactId>mariadb-java-client</artifactId>
-			<version>1.1.7</version>
+			<version>1.1.8</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hibernate</groupId>
