--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -165,7 +165,7 @@ SHOWCASE_MODE               = false
 
 # Nur bei der Entwicklung relevant, sollte in der produktiven
 # Umgebung nicht auf 'true' stehen
-DEBUG_MODE                  = true
+DEBUG_MODE                  = false
 
 # ------------------------------------------------------------ }}}
 
