Showcase-Mode in der properties-Datei dokumentiert

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -148,24 +148,31 @@ MOODLE_BASE_URL             = https://dummy-moodle-url.com
 SHOW_SOL_TO_PRIVELEGED      = true
 
 # Url zur MySQL-Dokumentation
-MYSQL_DOC_URL               = http://dev.mysql.com/doc/refman/5.6/en/
+MYSQL_DOC_URL               = http://dev.mysql.com/doc/\
+                              refman/5.6/en/
 
 # Falls keine Nutzer-ID ueber die URL gegeben ist, so laesst
-# sich ein 'Fallback'-Nutzer laden, was beim Debuggen/Entwicklen
+# sich ein 'Fallback'-Nutzer laden, was beim Debuggen/Entwickeln
 # nuetzlich ist.
 
 USE_FALLBACK_USER           = true
 FALLBACK_USER_ID            = user_1
 FALLBACK_ENCRYPTED_CODE     = d1ac3b14896c2faf640d1e00966fc065
 
-# Die folgenden Optionen haben momentan keine Funktion:
-LOG_BROWSER_HISTORY         = false
-LOG_PERFORMANCE             = false
-SHOWCASE_MODE               = false
-
 # Nur bei der Entwicklung relevant, sollte in der produktiven
 # Umgebung nicht auf 'true' stehen
 DEBUG_MODE                  = false
+
+# Dieser Modus ist fuer die GitHub-Seite gedacht. Damit werden
+# die Bearbeitungsfunktionen abgeschaltet. Zusaetzlich koennen
+# sich beliebig viele Studenten und Admins mit den IDs
+# 'demo_student' und 'demo_admin' anmelden.
+# Hierfuer sollte 'USE_FALLBACK_USER' auf 'false' stehen.
+SHOWCASE_MODE               = false
+
+# Die folgenden Optionen haben momentan keine Funktion:
+LOG_BROWSER_HISTORY         = false
+LOG_PERFORMANCE             = false
 
 # ------------------------------------------------------------ }}}
 
