Bugfix for the showcase-mode, before this fix you could delete user-rights as a demo-admin

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -93,7 +93,7 @@ FORCE_RESET_DATABASE        = false
 # Admins koennen auch zur Laufzeit hinzugefuegt werden, hierfuer
 # muss man jedoch den Datenbankeintrag fuer den Nutzer abaendern.
 # (Tabelle: "user", Spalte: "is_admin")
-ADMINS                      = user_1;
+ADMINS                      = admin_01
 
 # Anmeldung durch Moodle:
 # https://docs.moodle.org/27/de/Link/URL_konfigurieren
@@ -156,7 +156,7 @@ MYSQL_DOC_URL               = http://dev.mysql.com/doc/\
 # nuetzlich ist.
 
 USE_FALLBACK_USER           = true
-FALLBACK_USER_ID            = user_1
+FALLBACK_USER_ID            = admin_01
 FALLBACK_ENCRYPTED_CODE     = d1ac3b14896c2faf640d1e00966fc065
 
 # Nur bei der Entwicklung relevant, sollte in der produktiven
