Bugfix: you can not export the db-password as scenario-export-xml anymore.

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -181,7 +181,7 @@ LOG_PERFORMANCE             = false
 
 # Hintergrundverlauf:
 # http://www.colorzilla.com/gradient-editor/
-# Beispiel: hellblau zu weiß
+# Beispiel: hellblau zu weiss
 MAIN_BACKGROUND_CSS=background: -moz-linear-gradient(top, \
     rgba(209,213,255,1) 0%, rgba(255,255,255,0) 100%); \
   background: -webkit-gradient(linear, left top, left bottom, \
@@ -200,7 +200,7 @@ MAIN_BACKGROUND_CSS=background: -moz-linear-gradient(top, \
       endColorstr='#00ffffff',GradientType=0 ); \
   background-repeat: no-repeat;
 
-# # Weiteres Beispiel: grau zu weiß
+# # Weiteres Beispiel: grau zu weiss
 #
 # MAIN_BACKGROUND_CSS=background: -moz-linear-gradient(\
 #     top, rgba(193,193,193,1) 0%, rgba(255,255,255,0) 100%); \
