--- a/pom.xml
+++ b/pom.xml
@@ -92,6 +92,27 @@
 		<outputDirectory>trg/classes</outputDirectory>
 		<testOutputDirectory>trg/test-classes</testOutputDirectory>
 		<plugins>
+			<!-- JavaDoc documentation -->
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-javadoc-plugin</artifactId>
+				<configuration>
+					<reportOutputDirectory>
+						${basedir}/doc
+					</reportOutputDirectory>
+					<destDir>javadoc</destDir>
+					<failOnError>false</failOnError>
+				</configuration>
+				<version>2.10.2</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
+			</plugin>
 			<!-- Doxygen documentation -->
 			<plugin>
 				<groupId>com.soebes.maven.plugins.dmg</groupId>
@@ -226,6 +247,11 @@
 	<!-- http://en.wikipedia.org/wiki/Comparison_of_free_and_open-source_software_licenses -->
 	<dependencies>
 		<!-- {{{ Apache License V2.0 -->
+		<dependency>
+			<groupId>org.apache.maven.plugins</groupId>
+			<artifactId>maven-javadoc-plugin</artifactId>
+			<version>2.10.2</version>
+		</dependency>
 		<dependency>
 			<groupId>com.google.guava</groupId>
 			<artifactId>guava</artifactId>
