Scenario import script bugfixes, cleaned up 'main.js' and 'task.xhtml'

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -136,7 +136,7 @@ LOG_PATH                    =
 # die fuer die Anwendung selbst relevant sind.
 ONLY_SAVE_LAST_USER_QUERY   = false
 
-# Session-timeout in Sekunden.
+# Session-timeout in Sekunden (min. 60s)
 SESSION_TIMEOUT             = 1700
 
 # Diese URL wird dem Nutzer angezeigt, falls er ausgeloggt wird
@@ -169,6 +169,10 @@ DEBUG_MODE                  = false
 # 'demo_student' und 'demo_admin' anmelden.
 # Hierfuer sollte 'USE_FALLBACK_USER' auf 'false' stehen.
 SHOWCASE_MODE               = false
+
+# Wenn ein neues Szenario erstellt wird, so kann man sich direkt
+# eine passende Uebungsaufgabe zu Testzwecken generieren lassen
+CREATE_EXAMPLE_EXERCISE     = true
 
 # Die folgenden Optionen haben momentan keine Funktion:
 LOG_BROWSER_HISTORY         = false
