Minor frontend corrections

--- a/src/main/resources/config.properties
+++ b/src/main/resources/config.properties
@@ -137,11 +137,11 @@ LOG_PATH                    =
 ONLY_SAVE_LAST_USER_QUERY   = false
 
 # Session-timeout in Sekunden (min. 60s)
-SESSION_TIMEOUT             = 1700
+SESSION_TIMEOUT             = 1800
 
 # Diese URL wird dem Nutzer angezeigt, falls er ausgeloggt wird
 # oder falsche Login-Daten uebergibt.
-MOODLE_BASE_URL             = https://dummy-moodle-url.com
+MOODLE_BASE_URL             = https://github.com/UniversityOfWuerzburg-ChairCompSciVI/ueps#showcase
 
 # Aufgabenloesungen unter der Frage selbst fuer Nutzer mit
 # zusaetzlichen Rechten anzeigen lassen.
@@ -173,6 +173,13 @@ SHOWCASE_MODE               = false
 # Wenn ein neues Szenario erstellt wird, so kann man sich direkt
 # eine passende Uebungsaufgabe zu Testzwecken generieren lassen
 CREATE_EXAMPLE_EXERCISE     = true
+
+# Maximale Dateigröße für hochgeladen SQL-Skripte (in KB)
+MAX_SQL_SCRIPT_SIZE         = 500
+MAX_SQL_SCRIPT_SIZE_STUDENT = 100
+
+# Maximale Dateigröße für hochgeladen ER-Diagramme (in KB)
+MAX_ER_DIAGRAM_SIZE         = 500
 
 # Die folgenden Optionen haben momentan keine Funktion:
 LOG_BROWSER_HISTORY         = false
@@ -241,28 +248,33 @@ IMG.LOAD_IDLE       = default-indicator-idle.gif
 IMG.LOAD_WIDTH      = 30px
 IMG.LOAD_HEIGHT     = 30px
 
-# (Bildquelle: http://designworkplan.com/signage-symbols/free-vector-arrows.htm)
+# (Bildquelle: http://designworkplan.com/
+#    signage-symbols/free-vector-arrows.htm)
 IMG.RENEW_SESSION   = default-session-recycling.png
 IMG.SESSION_WIDTH   = 50px
 IMG.SESSION_HEIGHT  = 46px
 
-# (Bildquelle: http://commons.wikimedia.org/wiki/File:Stop_sign.svg)
+# (Bildquelle: http://commons.wikimedia.org/
+#    wiki/File:Stop_sign.svg)
 IMG.MULTIPASS       = default-permission-error.png
 IMG.PASS_WIDTH      = 250px
 IMG.PASS_HEIGHT     = 250px
 
-# (Bildquelle: http://blog.encodez.com/downloads/51-free-ajax-gif-animated-images)
+# (Bildquelle: http://blog.encodez.com/
+#    downloads/51-free-ajax-gif-animated-images)
 IMG.PROGRESSBAR     = default-progressbar.gif
 IMG.PROGRESS_WIDTH  = 320px
 IMG.PROGRESS_HEIGHT = 69px
 
-# (Bildquelle: http://designworkplan.com/signage-symbols/free-vector-arrows.htm)
+# (Bildquelle: http://designworkplan.com/
+#    signage-symbols/free-vector-arrows.htm)
 IMG.NAV_LEFT        = default-left.png
 IMG.NAV_RIGHT       = default-right.png
 IMG.NAV_WIDTH       = 35px
 IMG.NAV_HEIGHT      = 35px
 
-# (Bildquelle: http://www.favicon.cc/?action=icon&file_id=771614)
+# (Bildquelle: http://www.favicon.cc/
+#    ?action=icon&file_id=771614)
 IMG.FAVICON         = default-favicon.ico
 
 # }}} ------------------------------------------------------------
